--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
 
             if (error) {
                 console.error("Erro ao buscar status:", error);
-                document.getElementById("agent-status").textContent = "Indisponível";
+                document.getElementById("agent_status").textContent = "Indisponível";
             } else {
-                document.getElementById("agent-status").textContent = data.status ? "Ativo" : "Pausado";  // Verificando se é TRUE ou FALSE
+                document.getElementById("agent_status").textContent = data.status ? "Ativo" : "Pausado";  // Verificando se é TRUE ou FALSE
             }
         }
 
