--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
         <!-- Status do Agente -->
         <div class="status">
-            Status Atual do Agente: <span id="agent-status">Carregando...</span>
+            Status Atual do Agente: <span id="agent_status">Carregando...</span>
         </div>
 
         <!-- Botões de Controle Global -->
